# WatchDogs

./: LICENSE  README.md  config.example.json  pyproject.toml
fim/: __init__.py  baseline.py  cli.py  config.py  logger.py  scanner.py  watcher.py
tests/: test_fim.py  test_watcher.py
